--- a/sobre.html
+++ b/sobre.html
@@ -1,29 +1,18 @@
-<!DOCTYPE html>
 <html>
-
-<!-- Cabeçalho da página -->
 <head>
   <meta charset='utf-8'>
-  <title>Raphael Gomide - rrgomide</title>
+  <title>Fabio lucas - fabi0lucas</title>
   <link rel="stylesheet" href="./css/sobre.css">
 </head>
-
-<!-- Corpo da página -->
 <body>
 
-  <!-- Logo principal -->
-  <img
-    src='../img/logo.png'
+  <img src='../img/logo.png'
     alt='Mirror Fashion'
-    title='Mirror Fashion'
-  >
-
-  <!-- Título principal -->
+    title='Mirror Fashion'  >
   <h1>
     A Mirror Fashion
   </h1>
 
-  <!-- Parágrafos -->
   <p>
     A <strong>Mirror Fashion</strong> é a maior empresa comércio
     eletrônico no
